[Modified] OC-323 #comment changed styles of the dashboard and tables #time 8h

--- a/src/frontend/locales/en/userGroups.json
+++ b/src/frontend/locales/en/userGroups.json
@@ -62,6 +62,9 @@
   "LIST": {
     "HEADER": "Groups",
     "EMPTY_LIST": "The list of groups is empty",
+    "COMPONENTS": "Components",
+    "NAME": "Name",
+    "DESCRIPTION": "Description",
     "ADD_BUTTON": "Add",
     "CURRENT_USER_GROUP": "Current group"
   }
