[Modified] OC-323 #comment implemented checkboxes inside of the lists #time 16h

--- a/src/frontend/locales/en/apps.json
+++ b/src/frontend/locales/en/apps.json
@@ -5,6 +5,8 @@
     "HEADER": "Apps",
     "HEADER_ADMIN_CARDS": "Admin Cards",
     "APP_DOWN": "Disabled",
-    "APP_UP": "Enabled"
+    "APP_UP": "Enabled",
+    "NAME": "Name",
+    "STATUS": "Status"
   }
 }
