[Modified] OC-323 #comment redesigned scheduler and connection #time 16h

--- a/src/frontend/locales/en/connections.json
+++ b/src/frontend/locales/en/connections.json
@@ -83,13 +83,15 @@
       "CHOSEN_CONNECTOR_TO": "To connector",
       "DIRECTION": "Direction",
       "HINT_1": "Choose connectors and direction",
-      "PAGE_2": "Methods",
+      "PAGE_2": "Mode",
       "MODE": "Mode",
       "EXPERT_MODE": "Expert",
       "TEMPLATE_MODE": "Template",
-      "HINT_2": "Update methods",
-      "UPDATE_TEMPLATE": "Add Template",
-      "UPDATE_TEMPLATE_TITLE": "Add Template"
+      "HINT_2": "Choose mode",
+      "PAGE_3": "Methods",
+      "ADD_TEMPLATE": "Add Template",
+      "ADD_TEMPLATE_TITLE": "Add Template",
+      "HINT_3": "Add methods"
     },
     "LIST_BUTTON": "Connections",
     "UPDATE_BUTTON": "Update",
