[Improved] OC-323 #comment changed connection link in schedule list; added list view for admin cards #time 30m

--- a/src/frontend/locales/en/admin_cards.json
+++ b/src/frontend/locales/en/admin_cards.json
@@ -7,6 +7,7 @@
     "EMPTY_LIST": "The list of Admin Cards is empty",
     "HEADER": "Admin Cards",
     "NO_UPDATES": "No updates available",
-    "UPDATES": "New version is available"
+    "UPDATES": "New version is available",
+    "NAME": "Name"
   }
 }
