[Improved] OC-323 #comment renamed EntityChange into EntityForm components; changed User and User Group view #time 8h

--- a/src/frontend/locales/en/notification_templates.json
+++ b/src/frontend/locales/en/notification_templates.json
@@ -54,6 +54,7 @@
       "PAGE_1": "General Data",
       "PAGE_2": "Template content"
     },
+    "VIEW_BUTTON": "View",
     "LIST_BUTTON": "Notification Templates",
     "HEADER": "View Template"
   }
