[Improved] OC-323 #comment improved my profile, user and user group #time 16h

--- a/src/frontend/locales/en/my_profile.json
+++ b/src/frontend/locales/en/my_profile.json
@@ -12,5 +12,30 @@
     "TITLE": "Auto appearance",
     "ENABLE": "Enable",
     "DISABLE": "Disable"
+  },
+  "FORM": {
+    "PAGE_1": "Credentials",
+    "EMAIL": "Email",
+    "PASSWORD": "Password",
+    "REPEAT_PASSWORD": "Repeat password",
+    "HINT_1": "Provide credential information",
+    "PAGE_2": "User Details",
+    "NAME": "Name",
+    "SURNAME": "Surname",
+    "PHONE_NUMBER": "Phone Number",
+    "ORGANISATION": "Organisation",
+    "DEPARTMENT": "Department",
+    "USER_TITLE": "Title",
+    "PROFILE_PICTURE": "Avatar",
+    "PROFILE_PICTURE_PLACEHOLDER": "Please select an image...",
+    "HINT_2": "Provide user details",
+    "PAGE_3": "Settings",
+    "USER_GROUP": "User Group",
+    "USER_GROUP_PLACEHOLDER": "Choose user group...",
+    "DESCRIPTION": "Description",
+    "DESCRIPTION_DEFAULT": "Here you will see the description of the role",
+    "HINT_3": "Assign user group",
+    "THEMES": "Themes",
+    "APP_TOUR": "Application Tour"
   }
 }
