[Modified] OC-374 #comment changed notification messages with details #time 10h

--- a/src/frontend/locales/en/notifications.json
+++ b/src/frontend/locales/en/notifications.json
@@ -1,37 +1,37 @@
 {
   "SUCCESS": {
-    "ADD_USER": "The user <strong>{{name}}</strong> was successfully added.",
+    "ADD_USER": "The user <1><0>{{email}}</0></1> was successfully added.",
     "ADD_PROFILEPICTURE": "The user {{name}} was successfully added.",
     "FETCH_USERS": "The list of users was successfully fetched.",
-    "UPDATE_USER": "The user was successfully updated.",
+    "UPDATE_USER": "The user <1><0>{{email}}</0></1> was successfully updated.",
     "UPDATE_PROFILEPICTURE": "The user was successfully updated.",
     "UPDATE_USERDETAIL": "The userdetail was successfully updated.",
-    "DELETE_USER": "The user was successfully removed.",
+    "DELETE_USER": "The user <1><0>{{email}}</0></1> was successfully removed.",
     "UPDATE_AUTH_USER_LANGUAGE": "The language was updated",
-    "ADD_USERGROUP": "The user group {{name}} was successfully added.",
+    "ADD_USERGROUP": "The user group <1><0>{{name}}</0></1> was successfully added.",
     "ADD_GROUPICON": "The user group {{name}} was successfully added.",
     "FETCH_USERGROUPS": "The list of user groups was successfully fetched.",
-    "UPDATE_USERGROUP": "The user group was successfully updated.",
+    "UPDATE_USERGROUP": "The user group <1><0>{{name}}</0></1> was successfully updated.",
     "UPDATE_GROUPICON": "The user group was successfully updated.",
-    "DELETE_USERGROUP": "The user group was successfully removed.",
+    "DELETE_USERGROUP": "The user group <1><0>{{name}}</0></1> was successfully removed.",
     "TEST_CONNECTOR": "Successfully tested!",
-    "ADD_CONNECTOR": "The connector was successfully added",
+    "ADD_CONNECTOR": "The connector <1><0>{{title}}</0></1> was successfully added",
     "ADD_CONNECTORICON": "The icon was successfully uploaded",
     "FETCH_CONNECTORS": "Connectors were successfully fetched",
-    "UPDATE_CONNECTOR": "The connector was successfully updated",
-    "DELETE_CONNECTOR": "The connector was successfully removed",
+    "UPDATE_CONNECTOR": "The connector <1><0>{{title}}</0></1> was successfully updated",
+    "DELETE_CONNECTOR": "The connector <1><0>{{title}}</0></1> was successfully removed",
     "CHECK_CONNECTION": "The connection was successfully checked",
-    "ADD_CONNECTION": "The connection was successfully added",
+    "ADD_CONNECTION": "The connection <1><0>{{title}}</0></1> was successfully added",
     "FETCH_CONNECTIONS": "Connections were successfully fetched",
-    "UPDATE_CONNECTION": "The connection was successfully updated",
-    "DELETE_CONNECTION": "The connection was successfully removed",
-    "TRIGGER_SCHEDULE": "The job was successfully triggered",
+    "UPDATE_CONNECTION": "The connection <1><0>{{title}}</0></1> was successfully updated",
+    "DELETE_CONNECTION": "The connection <1><0>{{title}}</0></1> was successfully removed",
+    "TRIGGER_SCHEDULE": "The job <1><0>{{title}}</0></1> was successfully triggered",
     "TRIGGER_SCHEDULESUCCESS": "The job was successfully finished for 3.41 sec",
-    "ADD_SCHEDULE": "The schedule was successfully added",
+    "ADD_SCHEDULE": "The schedule <1><0>{{title}}</0></1> was successfully added",
     "FETCH_SCHEDULES": "Schedules were successfully fetched",
-    "DELETE_SCHEDULE": "The schedule was successfully removed",
-    "UPDATE_SCHEDULE": "The schedule was successfully updated",
-    "UPDATE_SCHEDULESTATUS": "The status was successfully updated",
+    "DELETE_SCHEDULE": "The schedule <1><0>{{title}}</0></1> was successfully removed",
+    "UPDATE_SCHEDULE": "The schedule <1><0>{{title}}</0></1> was successfully updated",
+    "UPDATE_SCHEDULESTATUS": "The status of schedule <1><0>{{title}}</0></1> was successfully updated",
     "ENABLE_SCHEDULES": "The selected schedules were successfully enabled",
     "DISABLE_SCHEDULES": "The selected schedules were successfully disabled",
     "START_SCHEDULES": "The selected schedules were successfully started",
@@ -40,18 +40,22 @@
     "ADD_TEMPLATE": "Template was successfully added",
     "CONVERT_TEMPLATE": "Template was successfully converted",
     "CONVERT_TEMPLATES": "Templates were successfully converted",
-    "IMPORT_TEMPLATE": "Template was successfully imported",
-    "EXPORT_TEMPLATE": "Template was successfully downloaded",
-    "DELETE_TEMPLATE": "The template was successfully removed",
-    "ADD_WEBHOOK": "The webhook was successfully created",
-    "DELETE_WEBHOOK": "The webhook was successfully removed",
+    "IMPORT_TEMPLATE": "The Template <1><0>{{name}}</0></1> was successfully imported",
+    "EXPORT_TEMPLATE": "The Template <1><0>{{name}}</0></1> was successfully downloaded",
+    "DELETE_TEMPLATE": "The template <1><0>{{name}}</0></1> was successfully removed",
+    "ADD_WEBHOOK": "The webhook of schedule <1><0>{{name}}</0></1> was successfully created",
+    "DELETE_WEBHOOK": "The webhook of schedule <1><0>{{name}}</0></1> was successfully removed",
     "COPYTOCLIPBOARD_WEBHOOK": "The webhook was successfully copied",
-    "ADD_INVOKER": "The invoker was successfully added",
-    "DELETE_INVOKER": "The invoker was successfully removed",
-    "ADD_NOTIFICATIONTEMPLATE": "The template was successfully added",
+    "ADD_INVOKER": "The invoker <1><0>{{id}}</0></1> was successfully added",
+    "DELETE_INVOKER": "The invoker <1><0>{{id}}</0></1> was successfully removed",
+    "UPDATE_INVOKER": "The invoker <1><0>{{id}}</0></1> was successfully updated",
+    "ADD_SCHEDULENOTIFICATION": "The notification <1><0>{{name}}</0></1> of schedule <3><0>{{scheduleTitle}}</0></3> was successfully added",
+    "UPDATE_SCHEDULENOTIFICATION": "The notification <1><0>{{name}}</0></1> of schedule <3><0>{{scheduleTitle}}</0></3> was successfully updated",
+    "DELETE_SCHEDULENOTIFICATION": "The notification <1><0>{{name}}</0></1> of schedule <3><0>{{scheduleTitle}}</0></3> was successfully removed",
+    "ADD_NOTIFICATIONTEMPLATE": "The template <1><0>{{name}}</0></1> was successfully added",
     "FETCH_NOTIFICATIONTEMPLATES": "Templates were successfully fetched",
-    "UPDATE_NOTIFICATIONTEMPLATE": "The template was successfully updated",
-    "DELETE_NOTIFICATIONTEMPLATE": "The template was successfully removed",
+    "UPDATE_NOTIFICATIONTEMPLATE": "The template <1><0>{{name}}</0></1> was successfully updated",
+    "DELETE_NOTIFICATIONTEMPLATE": "The template <1><0>{{name}}</0></1> was successfully removed",
     "FETCH_UPDATEAPPVERSION": "OC Update <0>{{version}}</0> available",
     "UPLOAD_VERSION": "New version was successfully uploaded",
     "UPDATE_TEMPLATESFORASSISTANT": "Templates were successfully updated",
