[Modified] OC-374 #comment changed text #time 10m

--- a/src/frontend/locales/en/notifications.json
+++ b/src/frontend/locales/en/notifications.json
@@ -31,7 +31,7 @@
     "FETCH_SCHEDULES": "Schedules were successfully fetched",
     "DELETE_SCHEDULE": "The schedule <1><0>{{title}}</0></1> was successfully removed",
     "UPDATE_SCHEDULE": "The schedule <1><0>{{title}}</0></1> was successfully updated",
-    "UPDATE_SCHEDULESTATUS": "The status of schedule <1><0>{{title}}</0></1> was successfully updated",
+    "UPDATE_SCHEDULESTATUS": "The status of <1><0>{{title}}</0></1> was successfully updated",
     "ENABLE_SCHEDULES": "The selected schedules were successfully enabled",
     "DISABLE_SCHEDULES": "The selected schedules were successfully disabled",
     "START_SCHEDULES": "The selected schedules were successfully started",
@@ -43,8 +43,8 @@
     "IMPORT_TEMPLATE": "The Template <1><0>{{name}}</0></1> was successfully imported",
     "EXPORT_TEMPLATE": "The Template <1><0>{{name}}</0></1> was successfully downloaded",
     "DELETE_TEMPLATE": "The template <1><0>{{name}}</0></1> was successfully removed",
-    "ADD_WEBHOOK": "The webhook of schedule <1><0>{{name}}</0></1> was successfully created",
-    "DELETE_WEBHOOK": "The webhook of schedule <1><0>{{name}}</0></1> was successfully removed",
+    "ADD_WEBHOOK": "The webhook of <1><0>{{name}}</0></1> was successfully created",
+    "DELETE_WEBHOOK": "The webhook of <1><0>{{name}}</0></1> was successfully removed",
     "COPYTOCLIPBOARD_WEBHOOK": "The webhook was successfully copied",
     "ADD_INVOKER": "The invoker <1><0>{{id}}</0></1> was successfully added",
     "DELETE_INVOKER": "The invoker <1><0>{{id}}</0></1> was successfully removed",
