--- a/src/frontend/locales/de/notifications.json
+++ b/src/frontend/locales/de/notifications.json
@@ -7,6 +7,7 @@
     "UPDATE_PROFILEPICTURE": "The user was successfully updated.",
     "UPDATE_USERDETAIL": "The userdetail was successfully updated.",
     "DELETE_USER": "The user was successfully deleted.",
+    "DELETE_USERS": "The users was successfully deleted.",
     "UPDATE_AUTH_USER_LANGUAGE": "The language was updated",
     "ADD_USERGROUP": "The user group {{name}} was successfully added.",
     "ADD_GROUPICON": "The user group {{name}} was successfully added.",
@@ -52,6 +53,7 @@
     },
     "UPDATE_USERDETAIL": "There is an error updating userdetail.",
     "DELETE_USER": "There is an error deleting user.",
+    "DELETE_USERS": "There is an error deleting users.",
     "LOG_IN": {
       "WRONG_CREDENTIALS": "Wrong email or password",
       "SERVER_NOT_FOUND": "The server connection problem."
