--- a/src/frontend/locales/en/templates.json
+++ b/src/frontend/locales/en/templates.json
@@ -7,6 +7,7 @@
     "NAME": "Name",
     "DESCRIPTION": "Description",
     "FROM_INVOKER": "From Invoker",
-    "TO_INVOKER": "To Invoker"
+    "TO_INVOKER": "To Invoker",
+    "CONVERT_SELECTED_BUTTON": "Convert Selected"
   }
 }
