[Modified] OC-374 #comment implemented notification messages for connection template and connector #time 1h

--- a/src/frontend/locales/en/notifications.json
+++ b/src/frontend/locales/en/notifications.json
@@ -18,7 +18,7 @@
     "DELETE_USERGROUPS": "The selected user groups were successfully removed.",
     "TEST_CONNECTOR": "Successfully tested!",
     "ADD_CONNECTOR": "The connector <1><0>{{title}}</0></1> was successfully added",
-    "ADD_CONNECTORICON": "The icon was successfully uploaded",
+    "ADD_CONNECTORICON": "The connector <1><0>{{title}}</0></1> was successfully added",
     "FETCH_CONNECTORS": "Connectors were successfully fetched",
     "UPDATE_CONNECTOR": "The connector <1><0>{{title}}</0></1> was successfully updated",
     "DELETE_CONNECTOR": "The connector <1><0>{{title}}</0></1> was successfully removed",
@@ -35,29 +35,29 @@
     "FETCH_SCHEDULES": "Schedules were successfully fetched",
     "DELETE_SCHEDULE": "The schedule <1><0>{{title}}</0></1> was successfully removed",
     "UPDATE_SCHEDULE": "The schedule <1><0>{{title}}</0></1> was successfully updated",
-    "UPDATE_SCHEDULESTATUS": "The status of <1><0>{{title}}</0></1> was successfully updated",
+    "UPDATE_SCHEDULESTATUS": "The status of the job <1><0>{{title}}</0></1> was successfully updated",
     "ENABLE_SCHEDULES": "The selected schedules were successfully enabled",
     "DISABLE_SCHEDULES": "The selected schedules were successfully disabled",
     "START_SCHEDULES": "The selected schedules were successfully started",
     "DELETE_SCHEDULES": "The selected schedules were successfully removed",
     "FETCH_TEMPLATES": "Templates were successfully fetched",
-    "ADD_TEMPLATE": "Template was successfully added",
-    "CONVERT_TEMPLATE": "Template was successfully converted",
+    "ADD_TEMPLATE": "The template <1><0>{{name}}</0></1> of the <3><0>{{title}}</0></3> was successfully added",
+    "CONVERT_TEMPLATE": "The template <1><0>{{name}}</0></1> was successfully converted",
     "CONVERT_TEMPLATES": "Templates were successfully converted",
     "IMPORT_TEMPLATE": "The Template <1><0>{{name}}</0></1> was successfully imported",
     "EXPORT_TEMPLATE": "The Template <1><0>{{name}}</0></1> was successfully downloaded",
     "DELETE_TEMPLATE": "The template <1><0>{{name}}</0></1> was successfully removed",
     "DELETE_TEMPLATES": "The selected templates were successfully removed",
-    "ADD_WEBHOOK": "The webhook of <1><0>{{name}}</0></1> was successfully created",
-    "DELETE_WEBHOOK": "The webhook of <1><0>{{name}}</0></1> was successfully removed",
-    "COPYTOCLIPBOARD_WEBHOOK": "The webhook was successfully copied",
+    "ADD_WEBHOOK": "The webhook of the job <1><0>{{name}}</0></1> was successfully created",
+    "DELETE_WEBHOOK": "The webhook of the job <1><0>{{name}}</0></1> was successfully removed",
+    "COPYTOCLIPBOARD_WEBHOOK": "The webhook of the job <1><0>{{name}}</0></1> was successfully copied",
     "ADD_INVOKER": "The invoker <1><0>{{name}}</0></1> was successfully added.",
     "DELETE_INVOKER": "The invoker <1><0>{{name}}</0></1> was successfully removed",
     "DELETE_INVOKERS": "The selected invokers were successfully removed",
     "UPDATE_INVOKER": "The invoker <1><0>{{name}}</0></1> was successfully updated",
-    "ADD_SCHEDULENOTIFICATION": "The notification <1><0>{{name}}</0></1> of schedule <3><0>{{scheduleTitle}}</0></3> was successfully added",
-    "UPDATE_SCHEDULENOTIFICATION": "The notification <1><0>{{name}}</0></1> of schedule <3><0>{{scheduleTitle}}</0></3> was successfully updated",
-    "DELETE_SCHEDULENOTIFICATION": "The notification <1><0>{{name}}</0></1> of schedule <3><0>{{scheduleTitle}}</0></3> was successfully removed",
+    "ADD_SCHEDULENOTIFICATION": "The notification <1><0>{{name}}</0></1> of the job <3><0>{{scheduleTitle}}</0></3> was successfully added",
+    "UPDATE_SCHEDULENOTIFICATION": "The notification <1><0>{{name}}</0></1> of the job <3><0>{{scheduleTitle}}</0></3> was successfully updated",
+    "DELETE_SCHEDULENOTIFICATION": "The notification <1><0>{{name}}</0></1> of the job <3><0>{{scheduleTitle}}</0></3> was successfully removed",
     "ADD_NOTIFICATIONTEMPLATE": "The template <1><0>{{name}}</0></1> was successfully added",
     "FETCH_NOTIFICATIONTEMPLATES": "Templates were successfully fetched",
     "UPDATE_NOTIFICATIONTEMPLATE": "The template <1><0>{{name}}</0></1> was successfully updated",
