[Modified] OC-383 #comment added additional button in AddConnector #time 2h

--- a/src/frontend/locales/en/app.json
+++ b/src/frontend/locales/en/app.json
@@ -19,6 +19,9 @@
     "APP": "App",
     "INVOKER": "Invoker"
   },
+  "FORM": {
+    "CANCEL": "Cancel"
+  },
   "LIST": {
     "CARD": {
       "BUTTON_VIEW": "View",
