[Modified] OC-383 #comment added additional button in AddConnection #time 30m

--- a/src/frontend/locales/en/connections.json
+++ b/src/frontend/locales/en/connections.json
@@ -34,7 +34,8 @@
       "HINT_3": "Add methods"
     },
     "LIST_BUTTON": "Connections",
-    "ADD_BUTTON": "Add",
+    "ADD_BUTTON": "Add & Close",
+    "ADD_BUTTON_AND_GO_TO_SCHEDULER": "Add & Go to Schedule",
     "HEADER": "Add Connection",
     "VALIDATION_MESSAGES": {
       "TITLE_REQUIRED": "Title is a required field",
@@ -96,7 +97,8 @@
       "HINT_3": "Add methods"
     },
     "LIST_BUTTON": "Connections",
-    "UPDATE_BUTTON": "Update",
+    "UPDATE_BUTTON": "Update & Close",
+    "UPDATE_BUTTON_AND_GO_TO_SCHEDULER": "Update & Go to Schedule",
     "HEADER": "Update Connection",
     "VALIDATION_MESSAGES": {
       "TITLE_REQUIRED": "Title is a required field",
